--- a/frontend/style.css
+++ b/frontend/style.css
@@ -8,3 +8,12 @@
 .message {
     margin: 5px;
 }
+
+.to-command {
+    color: red;
+    font-weight: bold;
+}
+
+.chname-command {
+    color: lightgray;
+}
