--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -1,12 +1,6 @@
 #chatbox {
-    height: 500px;
-    width: 500px;
     border: 1px solid black;
     overflow: auto;
-}
-
-.message {
-    margin: 5px;
 }
 
 .to-command {
@@ -17,4 +11,64 @@
 .chname-command {
     color: lightgray;
     font-style: italic;
+}
+
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background: #f5f5f5;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+}
+
+.chat-container {
+    flex: 1;
+    overflow-y: auto;
+    padding: 20px;
+    border-bottom: 1px solid #ccc;
+}
+
+.chat-container::-webkit-scrollbar {
+    width: 5px;
+}
+
+.chat-container::-webkit-scrollbar-thumb {
+    background: #888;
+}
+
+.chat-container::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
+
+.message {
+    margin-bottom: 15px;
+    color: #fff;
+    display: table;
+    padding: 10px;
+    border-radius: 10px;
+}
+
+.message strong {
+    color: #007bff;
+}
+
+#messageForm {
+    margin: 10px;
+}
+
+.my-message {
+    background: #007bff;
+    margin-left: auto; 
+    margin-right: 0;
+}
+
+.other-message {
+    background: #4a4a4b;
+    margin-right: auto; 
+    margin-left: 0;
 }
