--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -4,12 +4,12 @@
 }
 
 .to-command {
-    color: red;
+    color: red !important;
     font-weight: bold;
 }
 
 .chname-command {
-    color: lightgray;
+    color: lightgray !important;
     font-style: italic;
 }
 
